# gomoku

./: Cargo.toml  auteur
src/: lib.rs  main.rs
src/board/: board.rs  check.rs  mod.rs  square.rs
src/game/: mod.rs
src/graphics/: app.rs  mod.rs  settings.rs
src/minimax/: mod.rs
src/piston/: mod.rs
