[package]
name = "gomoku"
version = "0.1.0"
authors = ["afaucher17 <aymeric.faucher@gmail.com>", "tdieumeg <tdieumeg@users.noreply.github.com>"]
documentation = "https://afaucher17.github.io/gomoku/gomoku"
readme = "README.md"
keywords = ["gomoku", "gobang"]

[[bin]]
name = "gomoku"
doc = false

[features]
unstable = [] # for travis-cargo

[dependencies]
piston_window = "0.44.0"
gfx_core = "*"
gfx_device_gl = "*"
find_folder = "0.3.0"
itertools = "0.4"
rand = "0.3"
time = "*"
piston = "*"
piston2d-graphics = "*"
pistoncore-glutin_window = "*"
piston2d-opengl_graphics = "*"
