[package]
name = "gomoku"
version = "0.1.0"
authors = ["afaucher17 <aymeric.faucher@gmail.com>", "tdieumeg <tdieumeg@users.noreply.github.com>"]
documentation = "https://afaucher17.github.io/gomoku/gomoku"
readme = "README.md"
keywords = ["gomoku", "gobang"]

[[bin]]
name = "gomoku"
doc = false

[features]
unstable = [] # for travis-cargo

[dependencies]
find_folder = "0.3.0"
itertools = "0.4"
rand = "0.3"
time = "0.1.36"
glutin = "0.7.2"
image = "0.12.1"
glium = "0.16.0"
glium_text = "0.11.0"
cgmath = "0.12.0"

[dependencies.clap]
version = "*"
features = ["yaml", "suggestions", "color"]
